tests/ui/consts/const-eval/const-eval-span.stderr
error[E0308]: mismatched types
  --> $DIR/const-eval-span.rs:9:9
   |
LL |     V = CONSTANT,
   |         ^^^^^^^^ expected `isize`, found `S`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
